# FastApi-Todo-Gpt

./: Dockerfile  compose.yaml  pyproject.toml
todoapp/: main.py
